--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,4 +25,84 @@
     button {
         @apply px-4 py-2 rounded-md bg-blue-500 text-white;
     }
+
+    .normal {
+        @apply px-2  rounded-md bg-gray-300 text-gray-700;
+    }
+
+    .grass {
+        @apply px-2  rounded-md bg-green-300 text-green-700;
+    }
+
+    .fire {
+        @apply px-2  rounded-md bg-red-300 text-red-700;
+    }
+
+    .water {
+        @apply px-2  rounded-md bg-blue-300 text-blue-700;
+    }
+
+    .electric {
+        @apply px-2  rounded-md bg-yellow-300 text-yellow-700;
+    }
+
+    .ice {
+        @apply px-2  rounded-md bg-blue-100 text-blue-500;
+    }
+
+    .fighting {
+        @apply px-2  rounded-md bg-red-100 text-red-500;
+    }
+
+    .poison {
+        @apply px-2  rounded-md bg-purple-300 text-purple-700;
+    }
+
+    .ground {
+        @apply px-2  rounded-md bg-yellow-100 text-yellow-500;
+    }
+
+    .flying {
+        @apply px-2  rounded-md bg-blue-200 text-blue-500;
+    }
+
+    .psychic {
+        @apply px-2  rounded-md bg-purple-100 text-purple-500;
+    }
+
+    .bug {
+        @apply px-2  rounded-md bg-green-100 text-green-500;
+    }
+
+    .rock {
+        @apply px-2  rounded-md bg-yellow-200 text-yellow-600;
+    }
+
+    .ghost {
+        @apply px-2  rounded-md bg-purple-200 text-purple-500;
+    }
+
+    .dragon {
+        @apply px-2  rounded-md bg-red-200 text-red-500;
+    }
+
+    .dark {
+        @apply px-2  rounded-md bg-gray-800 text-white;
+    }
+
+    .steel {
+        @apply px-2  rounded-md bg-gray-400 text-gray-800;
+    }
+
+    .fairy {
+        @apply px-2  rounded-md bg-pink-200 text-pink-400;
+    }
+
+    .shadow {
+        @apply px-2  rounded-md bg-gray-300 text-gray-600;
+    }
+}
+
+@layer utilities {
+    
 }
